refactor: refine search